Added start missing script to package.json
Deployment on Heroku failed because of missing " start " script
node web.js ( server.js)

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "karma start test\\karma.conf.js"
+    "test": "karma start test\\karma.conf.js",
+    "start":"node web.js"
   },
   "dependencies": {
     "express": "^4.17.1",
