--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "grunt-angular-templates": "^0.5.7",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compass": "^1.0.0",
+    "grunt-contrib-compass": "^1.1.1",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
@@ -40,13 +40,16 @@
   },
   "scripts": {
     "test": "karma start test\\karma.conf.js",
-    "start":"node web.js",
-    "build": "grunt dist",
-    "postinstall": "./node_modules/bower/bin/bower install && npm run build"
+    "start": "node web.js",
+    "build": "grunt dist"
   },
   "dependencies": {
+    "compass": "^0.1.1",
     "express": "^4.17.1",
+    "gem": "^2.4.3",
     "gzippo": "^0.2.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "ruby": "^0.6.1",
+    "sass": "^1.22.12"
   }
 }
