--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "time-grunt": "^1.0.0"
   },
   "engines": {
-    "node": ">=10.15.3",
-    "npm": ">=6.11.3"
+    "node": "10.15.3",
+    "npm": "6.11.3"
   },
   "scripts": {
     "test": "karma start test\\karma.conf.js",
